@@ -33,6 +33,8 @@ This release includes the following bugfixes:
  o CURLOPT_FORBID_REUSE works again
  o CURLOPT_MAXCONNECTS set to zero caused libcurl to SIGSEGV
  o rate limiting works better
+ o getting FTP response code errors when using the multi-interface caused
+   libcurl to leak memory
 
 Other curl-related news:
 
@@ -51,6 +53,6 @@ advice from friends like these:
  James Housley, Olaf Stueben, Yang Tse, Gisle Vanem, Bradford Bruce,
  Ciprian Badescu, Dmitriy Sergeyev, Nir Soffer, Venkat Akella, Toon Verwaest,
  Matt Witherspoon, Alexey Simak, Martin Skinner, Sh Diao, Jared Lundell,
- Stefan Krause, Sebastien Willemijns
+ Stefan Krause, Sebastien Willemijns, Alexey Simak
 
         Thanks! (and sorry if I forgot to mention someone)
